--- a/style.css
+++ b/style.css
@@ -27,3 +27,59 @@ input{
     border-left-width: thick;
     border-radius: 60px;
 }
+
+
+
+/* CSS -- EDU*/
+#calc{
+    width: 500px;
+}
+
+#resultado{
+
+}
+.formula{
+    border: 1px solid black;  
+}
+.valor{
+    border: 1px solid black;  
+}
+.botonera{
+
+}
+
+.fila{
+
+}
+.columna{
+    border: 1px solid black;
+    padding: 2px;
+    text-align: center;
+}
+
+.columna:hover{
+    background-color: grey;
+    color: white;
+    cursor: pointer;
+}
+
+
+.w100{
+    width: 100%;
+    float: left;
+}
+
+.w25{
+    width: 25%;
+    float: left;
+}
+
+.w20{
+    width: 20%;
+    float: left;
+}
+
+.w40{
+    width: 40%;
+    float: left;
+}
