--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-#calc{
+#calculador{
     width: 500px;
 }
 
@@ -26,13 +26,17 @@
     margin-top: 5px;
     width: 90%;
 }
-.btn-calc:hover{
+
+button:hover {
     cursor: pointer;
-    box-shadow: -2px -2px 0px black;
-}
+    background-color: rgb(182, 178, 178);
+   }
+button:active {
+    background-color: rgb(136, 136, 136);
+   }
 
 .fila{
-
+    height: flex;
 }
 .columna{
     border: 1px solid black;
@@ -48,10 +52,6 @@
     float: left;
 }
 
-.w25{
-    width: 25%;
-    float: left;
-}
 
 .w20{
     width: 20%;
@@ -60,5 +60,9 @@
 
 .w40{
     width: 40%;
+    float: left;
+}
+.w45{
+    width: 45%;
     float: left;
 }
