--- a/style.css
+++ b/style.css
@@ -5,13 +5,20 @@ body{
 
 #calculador{
     width: 500px;
-    height: 430px;
+    /* height: 430px; */
     margin: 0 auto;
     border: 1px solid black;
     padding: 10px;
     background-color: rgb(158, 121, 239);
+    display: flex;
+    flex-direction: column;
 }
-
+#botonera{
+    display: grid;
+    grid-gap:5px;
+    grid-template-columns: repeat(4,auto);
+    grid-template-rows: repeat(4,auto);
+}
 #formula{
     height:49px;
 }
