--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@ button:active {
     background-color: rgb(136, 136, 136);
    }
 
-.encendido{
+#encendido{
     background-color: rgb(220, 46, 46);
 
 }
-.apagado{
+#apagado{
     background-color: rgb(20, 140, 20);
 }
